# genomed-vpn

./: .gitignore
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
